# patricio

./: README.md
docs/: SPRINT_1_PATRICIO.md
patricio/: CMakeLists.txt
patricio_interfaces/: CMakeLists.txt  package.xml
patricio_interfaces/srv/: StartGame.srv
patricio_my_world/: CMakeLists.txt  package.xml
patricio_my_world/launch/: house.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
patricio_my_world/models/tv_65in_emissive/material/script/: tv_emissive.material
patricio_my_world/rviz/: my_map_original.pgm
patricio_my_world/src/: keyboard_teleop.cpp
patricio_my_world/worlds/: house.sdf
patricio_nav_punto/launch/: my_tb3_navigator.launch.py
patricio_pilla_pilla/: package.xml  setup.cfg  setup.py
patricio_pilla_pilla/launch/: pilla_pilla.launch.py
patricio_pilla_pilla/patricio_pilla_pilla/: pilla_pilla_node.py
patricio_web/: admin.html  base_header_footer.html  contacto.html  empleado.html  index.html  politica_privacidad.html  usuario.html
patricio_web/css/: styles_generales.css  styles_index.css
patricio_web/js/: ros_logic.js  script_admin.js  script_empleado.js  script_singup_login_logout.js  script_usuario.js
proy_patricio/: CMakeLists.txt  package.xml
proy_patricio_captacion/: package.xml  setup.cfg  setup.py
proy_patricio_mundo/: package.xml  setup.cfg  setup.py
proy_patricio_nav_punto/: package.xml  setup.cfg  setup.py
proy_patricio_ruta/: package.xml  setup.cfg  setup.py
