<?xml version="1.0"?>
<package format="3">
  <name>patricio_pilla_pilla</name>
  <version>0.0.0</version>
  <description>Juego pilla-pilla usando Nav2 y servicio StartGame</description>

  <maintainer email="juan@todo.todo">juan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>patricio_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
